--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,6 +38,7 @@ header {
     padding-top: 20px;
     padding-bottom: 15px;
     padding-left: 10px;
+
 }
 
 .logo-TG {
@@ -81,23 +82,30 @@ button:active {
 
 
 /*Logos and RRSS */
+
 .logos {
     height: 200px;
-    width: auto;
     display:flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: column wrap;
-    margin: 10px 30px;
 }
 
-.rrss {
+nav ul {
+    width:100%;
+    justify-content: space-around;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display:flex;
+    align-items: center;
+    flex-flow: row wrap;
+    margin: 10px 30px;
+}
+li {
     padding: 10px 5px;
     align-items: center;
     width: 50px;
 }
 
-.rrss img {
+nav img {
     justify-content: center;
     align-items: center;
     width: 100%
